Update production document root and .env.prod

--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,15 @@
+# template for .env.local settings on production
 DATABASE_URL="mysql://root:D3lph1@localhost:3006/fam-ledger-prod?serverVersion=8.1.0&charset=utf8"
 
 KEEP_INBOX_FILES=0
-ROOT_FOLDER='/Users/jorgo/Library/CloudStorage/GoogleDrive-jmiridis@gmail.com/My Drive/Apps/FamLedger'
 DEFAULT_LIVE_MODE=1
 INVOICE_MODE=produccion
 #INVOICE_MODE=debug
+
+ROOT_FOLDER='/Volumes/KC3000-2TB/DataStorage/FamLedger'
+ACCOUNTANT_FOLDER='/Volumes/KC3000-2TB/DataStorage/FamLedger/accountant'
+ACCOUNTING_FOLDER='/Volumes/KC3000-2TB/DataStorage/FamLedger/accounting'
+ATTACHMENTS_FOLDER='/Volumes/KC3000-2TB/DataStorage/FamLedger/attachments'
+EDOCS_ROOT_FOLDER='/Volumes/KC3000-2TB/DataStorage/FamLedger/eDocs'
+INBOX_FOLDER='/Volumes/KC3000-2TB/DataStorage/FamLedger/inbox'
+INVOICES_FOLDER='/Volumes/KC3000-2TB/DataStorage/FamLedger/invoices'
