Add support for Sentry

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "anglemx/sat-cfdi": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "easycorp/easyadmin-bundle": "4.7.7",
+        "eclipxe/cfdiutils": "^2.25",
         "sensio/framework-extra-bundle": "^6.2",
+        "sentry/sentry-symfony": "^4.12",
         "stof/doctrine-extensions-bundle": "^1.8",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
