--- a/.env
+++ b/.env
@@ -42,3 +42,7 @@ EDOCS_ROOT_FOLDER=~
 INBOX_FOLDER=~
 INVOICES_FOLDER=~
 ROOT_FOLDER=~
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=~
+###< sentry/sentry-symfony ###
