--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "easycorp/easyadmin-bundle": "4.7.7",
         "eclipxe/cfdiutils": "^2.25",
+        "lelyfoto/twig-instanceof": "*",
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "^4.12",
         "stof/doctrine-extensions-bundle": "^1.8",
