Add support for a 'Outbox' and opening of local folders

--- a/.env
+++ b/.env
@@ -41,6 +41,7 @@ ATTACHMENTS_FOLDER=~
 EDOCS_ROOT_FOLDER=~
 INBOX_FOLDER=~
 INVOICES_FOLDER=~
+OUTBOX_FOLDER=~
 ROOT_FOLDER=~
 
 ###> sentry/sentry-symfony ###
